--- a/styles.css
+++ b/styles.css
@@ -550,6 +550,18 @@
         outline: none;
         padding: .25rem .5rem .5rem 0;
     }
+    .button{
+        display: inline-block;
+        background-color: var(--first-color);
+        color: #FFF;
+        padding: 1rem;
+        border-radius: .5rem;
+        font-weight: var(--font-medium);
+   }
+   .button:hover{
+        background-color: var(--first-color-alt);
+        color:#FFF
+   }
     .footer{
         padding-top: 2rem;
     }
@@ -684,7 +696,7 @@
         .header,
         .main,
         .footer_container{
-           padding: 0 1rem; 
+        padding: 0 1rem; 
         }
         .nav{
             height: calc(var(--header-height) + 1.5rem);
@@ -703,7 +715,6 @@
             margin-left: auto;
         }
         .change-theme{
-          
             margin: 0;
         }
         .home_container{
